--- a/language/control-structures.xml
+++ b/language/control-structures.xml
@@ -28,8 +28,8 @@ if (expr)
 		<simpara>
     As described in the section about expressions, expr is evaluated
     to its truth value.  If <replaceable>expr</replaceable> evaluates
-    to <literal>TRUE</literal>, PHP will execute statement, and if it
-    evaluates to <literal>FALSE</literal> - it'll ignore it.
+    to &true;, PHP will execute statement, and if it
+    evaluates to &false; - it'll ignore it.
    </simpara>
 		<para>
     The following example would display <computeroutput>a is bigger
@@ -77,7 +77,7 @@ if ($a > $b) {
     is what <literal>else</literal> is for.  <literal>else</literal>
     extends an <literal>if</literal> statement to execute a statement
     in case the expression in the <literal>if</literal> statement
-    evaluates to <literal>FALSE</literal>.  For example, the following
+    evaluates to &false;.  For example, the following
     code would display <computeroutput>a is bigger than
     b</computeroutput> if <replaceable>$a</replaceable> is bigger than
     <replaceable>$b</replaceable>, and <computeroutput>a is NOT bigger
@@ -94,9 +94,9 @@ if ($a > $b) {
 
     The <literal>else</literal> statement is only executed if the
     <literal>if</literal> expression evaluated to
-    <literal>FALSE</literal>, and if there were any
+    &false;, and if there were any
     <literal>elseif</literal> expressions - only if they evaluated to
-    <literal>FALSE</literal> as well (see <link linkend="control-structures.elseif">elseif</link>).
+    &false; as well (see <link linkend="control-structures.elseif">elseif</link>).
 
    </para>
 	</sect1>
@@ -110,10 +110,10 @@ if ($a > $b) {
     <literal>else</literal>, it extends an <literal>if</literal>
     statement to execute a different statement in case the original
     <literal>if</literal> expression evaluates to
-    <literal>FALSE</literal>.  However, unlike
+    &false;.  However, unlike
     <literal>else</literal>, it will execute that alternative
     expression only if the <literal>elseif</literal> conditional
-    expression evaluates to <literal>TRUE</literal>.  For example, the
+    expression evaluates to &true;.  For example, the
     following code would display <computeroutput>a is bigger than
     b</computeroutput>, <computeroutput>a equal to b</computeroutput>
     or <computeroutput>a is smaller than b</computeroutput>:
@@ -133,7 +133,7 @@ if ($a > $b) {
     There may be several <literal>elseif</literal>s within the same
     <literal>if</literal> statement.  The first
     <literal>elseif</literal> expression (if any) that evaluates to
-    <literal>true</literal> would be executed.  In PHP, you can also
+    &true; would be executed.  In PHP, you can also
     write 'else if' (in two words) and the behavior would be identical
     to the one of 'elseif' (in a single word).  The syntactic meaning
     is slightly different (if you're familiar with C, this is the same
@@ -144,9 +144,9 @@ if ($a > $b) {
     The <literal>elseif</literal> statement is only executed if the
     preceding <literal>if</literal> expression and any preceding
     <literal>elseif</literal> expressions evaluated to
-    <literal>FALSE</literal>, and the current
+    &false;, and the current
     <literal>elseif</literal> expression evaluated to
-    <literal>TRUE</literal>.
+    &true;.
    </simpara>
 	</sect1>
 	<sect1 id="control-structures.alternative-syntax">
@@ -208,13 +208,13 @@ while (expr) statement
     The meaning of a <literal>while</literal> statement is simple.  It
     tells PHP to execute the nested statement(s) repeatedly, as long
     as the <literal>while</literal> expression evaluates to
-    <literal>TRUE</literal>.  The value of the expression is checked
+    &true;.  The value of the expression is checked
     each time at the beginning of the loop, so even if this value
     changes during the execution of the nested statement(s), execution
     will not stop until the end of the iteration (each time PHP runs
     the statements in the loop is one iteration).  Sometimes, if the
     <literal>while</literal> expression evaluates to
-    <literal>FALSE</literal> from the very beginning, the nested
+    &false; from the very beginning, the nested
     statement(s) won't even be run once.
    </simpara>
 		<para>
@@ -266,7 +266,7 @@ endwhile;
     of the iteration), whereas it's may not necessarily run with a
     regular <literal>while</literal> loop (the truth expression is
     checked at the beginning of each iteration, if it evaluates to
-    <literal>FALSE</literal> right from the beginning, the loop
+    &false; right from the beginning, the loop
     execution would end immediately).
    </simpara>
 		<para>
@@ -284,7 +284,7 @@ do {
 		<simpara>
      The above loop would run one time exactly, since after the first
      iteration, when truth expression is checked, it evaluates to
-     <literal>FALSE</literal> ($i is not bigger than 0) and the loop
+     &false; ($i is not bigger than 0) and the loop
      execution ends.
    </simpara>
 		<para>
@@ -338,15 +338,15 @@ for (expr1; expr2; expr3) statement
    </simpara>
 		<simpara>
 	매 반복의 시작 때마다 <replaceable>expr2</replaceable>가 평가된다. 
-	만약 이것이 <literal>TRUE</literal>면 루프는 계속되고 statement가 실행된다. 
-	<literal>FALSE</literal>이면 루프는 종료된다.
+	만약 이것이 &true;면 루프는 계속되고 statement가 실행된다. 
+	&false;이면 루프는 종료된다.
    </simpara>
 		<simpara>
 	매 반복이 끝날 때 <replaceable>expr3</replaceable>가 평가(실행)된다.
    </simpara>
 		<simpara>
 	각 평가식은 비워둘 수 있다. <replaceable>expr2</replaceable>가 비어있으면 무한 루프를 뜻한다. 
-	(PHP는 C와 같이 비어있으면 TRUE로 인식한다.) 
+	(PHP는 C와 같이 비어있으면 &true;로 인식한다.) 
 	이건 별로 좋은 방법이 아니지만, 종종 이렇게 사용하고 <link linkend="control-structures.break">
 				<literal>break</literal>
 			</link>를 사용하여 종료하는 방법도 있다. 
