variable name fix
git-svn-id: https://svn.php.net/repository/phpdoc/kr/trunk@113535 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/variables.xml
+++ b/language/variables.xml
@@ -195,7 +195,7 @@ $bar = &amp;test();    // Invalid.
 						</listitem>
 					</varlistentry>
 					<varlistentry>
-						<term>HTTP_ENCODING</term>
+						<term>HTTP_ACCEPT_ENCODING</term>
 						<listitem>
 							<simpara>
          현재의 요구(request)에 포함된 <literal>Accept-Encoding:</literal> 헤더의 내용 (존재하는 경우만).
